fixed navigaition spacing

--- a/client/src/CSS/Footer.css
+++ b/client/src/CSS/Footer.css
@@ -2,19 +2,32 @@
     position:fixed;
     display: flex;
     justify-content: space-between;
-    width: 95%;
+    width: 100%;
     bottom:0;
     height:65px;
-    width:100%;
     background-color: lightslategrey;
     align-items: center;
 }
 .footer-details{
     flex: 30%;
+    display: flex;
+    padding: 0 10px;
 }
 .footer-controls{
     flex: 40%;
+    display: flex;
+    padding: 0 100px;
+    color: white;
+    justify-content:space-between;
+    align-items: center;
+    max-width: 300px;
+    font-size: 1.4em;
 }   
 .footer-volume{
     flex: 30%;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    padding: 0 10px;
+    font-size: 1.2em;
 }
